<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Seller LaalSobuj</string>
    <string name="layout_direction">0</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">Never</string>
    <string name="exit_msg">বের হওয়ার জন্যে আরেকবার চাপুন</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="network_failure">দুঃখিত ইন্টারনেট কানেকশন নেই</string>
    <string name="Passwordfilter" translatable="false">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.$@#%-*:?!_,&amp;</string>
    <string name="Emailfilter" translatable="false">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.@-_</string>
    <string name="fullnamefilter" translatable="false">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ .@-_</string>
    <string name="email">ইমেইল/ফোন নম্বর লিখুন</string>
    <string name="password">পাসওয়ার্ড লিখুন</string>
    <string name="sign_in">লগ ইন করুন</string>
    <string name="forgot_pass">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="signin_des1">পণ্য আপলোড ও অর্ডারের তথ্য জানতে বিক্রেতা হিসেবে লগ ইন করুন</string>
    <string name="signin_des2">বিক্রেতা হিসেবে রেজিস্টার্ড হতে যোগাযোগ করুন ০৯৬৭৮৮৪৪৪৮৫ নাম্বারে</string>
    <string name="signin_des3">নারীর অর্থনৈতিক মুক্তির প্রয়াসে সাথে আছে লালসবুজ</string>
    <string name="forgot_password">পাসওয়ার্ড ভুলে গেছেন</string>
    <string name="reset">রিসেট</string>
    <string name="please_type_mail">ইমেইল/ফোন নম্বর লিখুন</string>
    <string name="please_type_password">পাসওয়ার্ড লিখুন</string>
    <string name="email_error">আপনার ইমেইল চেক করুন</string>
    <string name="username">ইমেইল আইডি অথবা  ফোন নাম্বার</string>
    <string name="pleasewait">অনুগ্রহ করে অপেক্ষা করুন..</string>
    <string name="search_products">আপনার পণ্য খুজুন</string>
    <string name="reallySignOut">আপনি কি লগ আউট করতে চান?\u003F</string>
    <string name="user_does_not_exist">কোন ব্যবহারকারি নেই</string>
    <string name="cannot_login_admin">আপনি এডমিন হিসেবে লগইন করতে পারবেন না</string>
    <string name="cannot_login_moderator">আপনি মডারেটর হিসেবে লগইন করতে পারবেন না</string>
    <string name="cannot_login_merchant">আপনি বিক্রেতা হিসেবে লগইন করতে পারবেন না</string>
    <string name="enter_correct_username_password">সঠিকভাবে ইমেইল/ফোন এবং পাসওয়ার্ড লিখুন</string>
    <string name="activate_email">ইমেইল/ফোন দিয়ে আপনার আইডি চালু করুন</string>
    <string name="account_disabled">আপনার আইডি বন্ধ করা হয়েছে</string>
    <string name="something_went_wrong">দুঃখিত! আপনার কোথাও ভুল হচ্ছে</string>
    <string name="new_orders_today">আজকের নতুন অর্ডার</string>
    <string name="add_product">পণ্য যোগ করুন</string>
    <string name="new_orders">অর্ডার সমূহ</string>
    <string name="delivered_orders_today">সকল ডেলিভারি তালিকা</string>
    <string name="total_revenue">সফল অর্ডারের মূল্য (কমিশন বাদে)</string>
    <string name="total_revenue_amount">মোট আয়ের পরিমান</string>
    <string name="completed_transactions">সফল লেনদেন </string>
    <string name="total_items">মোট পণ্য</string>
    <string name="total_items_count">মোট পন্যের পরিমান</string>
    <string name="complete_order_amount">সফল অর্ডারের মূল্য</string>
    <string name="store_name">Puma store</string>
    <string name="products">সকল পণ্য</string>
    <string name="message">ম্যাসেজ</string>
    <string name="news">নোট</string>
    <string name="help">গুরুত্বপূর্ন তথ্যাদি</string>
    <string name="rate_app">অ্যাপসটি আপডেট করুন</string>
    <string name="guest">Guest</string>
    <string name="listed_merchandize_value">তালিকাভুক্ত সকল পণ্যের মূল্য</string>
    <string name="incomplete_order_amount">অসম্পূর্ন অর্ডারের মূল্য</string>
    <string name="cod_available">ক্যাশঅন ডেলিভারি আছে</string>
    <string name="only_qty_available">আর মাত্র %1$d %1$s বাকি আছে</string>
    <string name="sold_out">বিক্রয় হয়েছে</string>
    <string name="buy_now">এখনই কিনুন</string>
    <string name="no_product">কোন পণ্য নাই</string>
    <string name="edit">এডিট করুন</string>
    <string name="delete">ডিলিট করুন</string>
    <string name="title_activity_product_detail">পন্যের বর্ণনা</string>
    <string name="share_this_product">পণ্যটি শেয়ার করুন</string>
    <string name="delete_product">ডিলিট করুন</string>
    <string name="like">লাইক</string>
    <string name="likes">লাইকস</string>
    <string name="play_video">ভিডিও চালু করুন</string>
    <string name="size">সাইজ</string>
    <string name="description">বিস্তারিত</string>
    <string name="product_selfies">PRODUCT SELFIES</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_product">Product</string>
    <string name="logout">লগ আউট</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="popup_msg">Default Message</string>
    <string name="process_lbl">Process Label</string>
    <string name="pick_category_lbl">ক্যাটাগরি বাছাই করুন</string>
    <string name="step1_lbl">ধাপ-১</string>
    <string name="step2_lbl">ধাপ-২</string>
    <string name="img_upload_lbl">পণ্যের ছবি আপলোড করুন:</string>
    <string name="product_title">পণ্যের শিরোনাম</string>
    <string name="product_desc_lbl">পণ্য সম্পর্কে আরো বিস্তারিত তথ্য দিন</string>
    <string name="prod_details_hint">পণ্যের বিস্তারিত তথ্য লিখুন</string>
    <string name="video_link_lay_lbl">ইউটিউব ভিডিও লিংক যুক্ত করুন(বাধ্যতামূলক নয়)</string>
    <string name="barcode_lay_lbl">12345 লিখুন</string>
    <string name="barcode_hint">EX:12345</string>
    <string name="next_lbl">পরবর্তী</string>
    <string name="product_color_lay_lbl">পণ্যের রং নির্বাচন করুন</string>
    <string name="size_availability_lbl">পণ্যের সাইজ নিয়ে তথ্য দিবেন?</string>
    <string name="daily_deals_lbl">ছাড় দিতে চান ?</string>
    <string name="discount_percentage_hint">ছাড়(%)</string>
    <string name="daily_deals_date">ছাড় দেয়ার তারিখ</string>
    <string name="cash_on_delivery">ক্যাশ অন ডেলিভারি</string>
    <string name="fb_discount_option">নিয়মিত ছাড়</string>
    <string name="coupon_percentage_msg">Please update with your coupon percentage</string>
    <string name="shipping_time_lbl">শিপিং সময়সীমা </string>
    <string name="ships_to_lbl">ডেলিভারির খরচ</string>
    <string name="reset_btn_lbl">রিসেট</string>
    <string name="add_btn_lbl">যোগ করুণ</string>
    <string name="video_link_hint">https://www.youtube.com/watch?v=pVxOVlm_lE8</string>
    <string name="sample_time">বাছাই করুন</string>
    <string name="size_option_price">বিক্রেতা নির্ধারিত মূল্য</string>
    <string name="size_option_quantity">পণ্যের মজুদ পরিমান</string>
    <string name="posted_news">আপনার নোট \nসফলভাবে যোগ হয়েছে</string>
    <string name="waiting_for_admin">এডমিনের রিভিউ এর জন্য অপেক্ষা করুন</string>
    <string name="pick_image_intent_text">একটা ছবি বাছাই করুন</string>
    <string name="publish_status">পাবলিশ হয়েছে</string>
    <string name="pending_status">প্রক্রিয়াধীন আছে</string>
    <string name="new_status">নতুন</string>
    <string name="delivered_status">ডেলিভারি হয়েছে</string>
    <string name="shipped_status">শিপড হয়েছে</string>
    <string name="cancelled_status">বাতিল হয়েছে</string>
    <string name="refunded_status">ফেরত এসেছে</string>
    <string name="paid_status">পরিশোধ</string>
    <string name="admin_approval_wait">অনুগ্রহ করে এডমিন এর অনুমোদনের জন্য অপেক্ষা করুন</string>
    <string name="user_not_found">ব্যবহারকারি নিবন্ধিত নয়</string>
    <string name="merchant_not_valid">বিক্রেতার ইমেইল আইডি লিখুন</string>
    <string name="select_category">ক্যাটাগরি নির্বাচন করুন</string>
    <string name="no_item_found">দুঃখিত! কোন পণ্য নেই</string>
    <string name="select_color">রং নির্বাচন করুন</string>
    <string name="auto">ছবির মতো</string>
    <string name="create">তৈরি করুন</string>
    <string name="send">পাঠান</string>
    <string name="select_product_date">ছাড় দেয়ার তারিখ বাছাই করুন</string>
    <string name="type_product_title">আপনার পণ্যের শিরোনাম লিখুন</string>
    <string name="product_title_en" tools:ignore="MissingTranslation">আপনার পণ্যের শিরোনাম লিখুন(ইংরেজিতে)</string>
    <string name="save_btn_lbl">সেভ করুন</string>
    <string name="property">সাইজ</string>
    <string name="unit">পণ্যের মজুদ পরিমান</string>
    <string name="varients_price">সাইজ সমুহ এবং তাদের মূল্য</string>
    <string name="add">যোগ করুন</string>
    <string name="add_property">সাইজ যোগ করুন</string>
    <string name="ok">ঠিক আছে</string>
    <string name="search_country">জেলা খুজুন</string>
    <string name="everywhere_else_lbl">অন্যান্য জেলা</string>
    <string name="shipping_cost_hint">ডেলিভারি খরচ লিখুন(৳)</string>
    <string name="please_enter_country">Please Enter Country</string>
    <string name="reqd_category">ক্যাটাগরি বাছাই করুন</string>
    <string name="reqd_image">পণ্যের কমপক্ষে একটি ছবি দিন</string>
    <string name="reqd_prod_title">পণ্যের শিরোনাম দিতে হবে</string>
    <string name="reqd_prod_desc">পণ্যের বিস্তারিত দিতে হবে</string>
    <string name="reqd_barcode">১২৩৪৫ সংখ্যা দিতে হবে</string>
    <string name="reqd_color">কমপক্ষে একটি রং বাছাই করুন</string>
    <string name="reqd_item_price">পণ্যের মূল্য দিতে হবে</string>
    <string name="reqd_item_quantity">পণ্যের মজুদ পরিমান দিতে হবে</string>
    <string name="reqd_deals_discount">কত পার্সেন্ট ছাড় দিবেন %</string>
    <string name="reqd_deals_date">ছাড় দেয়ার তারিখ বাছাই করুন</string>
    <string name="reqd_fbdiscount_percentage">Enter the facebook share percentage</string>
    <string name="reqd_shipping_time">ডেলিভারির সময়সীমা দিতে হবে</string>
    <string name="reqd_ships_to">ডেলিভারির খরচ দিতে হবে</string>
    <string name="reqd_deals_data">ডেলিভারির খরচ দিতে হবে</string>
    <string name="usr_msg_upload_cancel">আপনি কি সত্যি ফিরে যেতে চান?</string>
    <string name="prod_not_posted">দুঃখিত আপনার পণ্যটি আপলোড হয় নি, কিছুক্ষন পর আবার চেষ্টা করুন</string>
    <string name="product_success_post_msg">আপনার পণ্য সফলভাবে আপলোড হয়েছে। ধন্যবাদ!</string>
    <string name="prod_delete_confirmation">আপনি কি আপনার পণ্যটি মুছে ফেলতে চান?</string>
    <string name="no_message">কোন ম্যাসেজ নাই</string>
    <string name="type_your_message">আপনার ম্যাসেজ লিখুন</string>
    <string name="please_enter_message">অনুগ্রহ করে ম্যাসেজে যান</string>
    <string name="by">By</string>
    <string name="search_message">ম্যাসেজ খুজুন</string>
    <string name="no_news">কোন নোট নাই</string>
    <string name="no_orders_found">কোন অর্ডার নাই</string>
    <string name="prod_delete_success_msg">আপনার পণ্যটি সফলভাবে মুছে ফেলা হয়েছে</string>
    <string name="auto_detect">ছবির মতো</string>
    <string name="shipping">শিপিং</string>
    <string name="one_business_day">১ দিন</string>
    <string name="one_two_business">২ দিন</string>
    <string name="one_three_business">৩ দিন</string>
    <string name="three_five_business">১-৪ দিন</string>
    <string name="one_two_week_business">১-২ সপ্তাহ</string>
    <string name="two_three_week_business">২-৩ সপ্তাহ</string>
    <string name="three_four_week_business">৩-৪ সপ্তাহ</string>
    <string name="four_six_week_business">৪-৬ সপ্তাহ</string>
    <string name="six_eight_week_business">৬-৮ সপ্তাহ</string>
    <string name="color_selected">রং নির্বাচন হয়েছে</string>
    <string name="edit_product">পণ্য পরিশোধন</string>
    <string name="back_lbl">ফিরে যান</string>
    <string name="reset_success_message">সফলভাবে রিসেট হয়েছে / আপনার ইমেইল বক্স চেক করুন</string>
    <string name="reqd_news">যেকোন একটা খবর দিন</string>
    <string name="reqd_search_key">পণ্য খোজার জন্যে পণ্যের নাম দিতে হবে</string>
    <string name="reqd_message">খোজার জন্যে বার্তা দিতে হবে</string>
</resources>